--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>This is the staticwebapp azure sesion hello abhishek </h1>
 <h1>Hello Abhishek this is Azure</h1>
+<h1>Hello Abhishek this is stage envioronmentfor staticwebapp </h1>
